# clips

./: .gitignore  Cargo.toml  build.rs
protos/: msg.proto
py/: clipc.py  clipc_linux.py
src/: bubble.rs  fizz.rs  lib.rs  monitor.rs  peer.rs  runtime.rs  servo.rs  session.rs  storage.rs
tests/: feed.rs
